Ensure sides of the hero presentation are visible on mobile

--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -39,7 +39,7 @@ div.hero-flex-presentation {
 div.hero-flex-presentation-inner {
     width: fit-content;
     margin: auto;
-    max-width: 100vw;
+    max-width: 90vw;
 }
 
 div.hero-flex-presentation-inner div.email-block-new {
